<resources>
    <string name="urlAPOD">https://api.nasa.gov/planetary/</string>
    <string name="apiKeyGC">AIzaSyCva-PYnIT4J3UeEyL3P_Q_AbBKS7FmRRw</string>
    <string name="app_name">The floor is NASA!</string>
    <string name="save">SAVE SCORE</string>
    <string name="start">RESET GAME</string>
    <string name="headingT">CURRENT SCORE:</string>
    <string name="saved">By clicking the \"Save Score\" button, you will be able to store your current score!</string>
    <string name="savedNEW">Saved Score:</string>
    <string name="equal">Your saved score is already</string>
    <string name="subtitle1">Interactive APOD game!</string>
    <string name="calendarTB">Date Picker</string>
    <string name="apod_dataTB">current A.P.O.D. Data</string>
    <string name="dateRef">"Picture from date:  "</string>
    <string name="copyrightRef">Photo by/from: </string>
    <string name="dateDialogT">Date picker</string>
    <string name="defCopyright">NASA archives.</string>
    <string name="dialogPOSITIVE">Change game obstacle</string>
    <string name="snackbarQ">Do you also want the black hole back?</string>
    <string name="snackbarA">Reset obstacle image</string>
</resources>
